--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,17 @@
-FROM node:alpine as build
+FROM node:alpine AS build
 
 WORKDIR /app
 
 COPY frontend/package*.json ./
 RUN npm install
 RUN npm install sass
-COPY . .
-
+COPY frontend/ ./
 RUN npm run build
 
+# Stage 2: Serve
 FROM nginx:stable-alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 3000
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
