--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,5 @@
 services:
 
-  networks:
-    dev:
-
   web:
     build: ./backend
     volumes:
@@ -113,24 +110,29 @@ services:
     networks:
       - dev
 
-  frontend:
-    build:
-      context: ./frontend
-    container_name: frontend
-    volumes:
-      - ./frontend:/app
-    environment:
-      - NEXT_PUBLIC_API=https://3-gymnasium.kg
-      - NEXT_PUBLIC_ENDPOINT=api
-    ports:
-      - "3000:3000"
-    depends_on:
-      - web
-    networks:
-      - dev
+frontend:
+  build:
+    context: ./frontend
+    dockerfile: Dockerfile
+  container_name: frontend
+  volumes:
+    - ./frontend:/app
+    - /app/node_modules
+  environment:
+    - NEXT_PUBLIC_API=https://3-gymnasium.kg
+    - NEXT_PUBLIC_ENDPOINT=api
+  ports:
+    - "3000:80"
+  depends_on:
+    - web
+  networks:
+    - dev
 
 volumes:
   postgres_data:
   redis_data:
   static_volume:
   media_volume:
+
+networks:
+  dev:
