--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,10 @@
 user root;
 worker_processes 1;
 
+events {
+    worker_connections 1024;
+}
+
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
@@ -35,7 +39,8 @@ http {
     }
 
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name 3-gymnasium.kg www.3-gymnasium.kg;
 
         ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
