--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SECRET_KEY='django-insecure-m79pr=z3v^v0e8f@y^(tb1ak%=ga^0813me9=5c!^iigx_nkj6'
 EMAIL_HOST_USER='nurdaawah@gmail.com'
 EMAIL_HOST_PASSWORD='bcnx vaum cowe lryw'
 
-ALLOWED_HOSTS=3-gymnasium.kg,www.3-gymnasium.kg,0.0.0.0,0.0.0.0:9000
+ALLOWED_HOSTS=3-gymnasium.kg,www.3-gymnasium.kg,web:9000
 
 DEBUG=True
 
