--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 3000;
-    server_name 3-gymnasium.kg www.3-gymnasium.kg;
+    server_name localhost;
     root /usr/share/nginx/html;
 
     location / {
