--- a/nginx.conf
+++ b/nginx.conf
@@ -62,15 +62,9 @@ http {
         }
 
         location / {
-            proxy_pass http://frontend:3000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
-            proxy_buffering off;
-            proxy_connect_timeout 300s;
-            proxy_read_timeout 300s;
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location /api/ {
