--- a/nginx.conf
+++ b/nginx.conf
@@ -62,7 +62,7 @@ http {
         }
 
     location /api/ {
-        proxy_pass http://web:9000;
+        proxy_pass http://web:9000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,7 +70,7 @@ http {
     }
 
     location /admin/ {
-        proxy_pass http://web:9000;
+        proxy_pass http://web:9000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -78,7 +78,7 @@ http {
     }
 
     location /accounts/ {
-        proxy_pass http://web:9000;
+        proxy_pass http://web:9000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -86,7 +86,7 @@ http {
     }
 
     location /teachers/ {
-        proxy_pass http://frontend:3000;
+        proxy_pass http://frontend:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
