--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,14 @@
-FROM node:alpine as build
+# frontend/Dockerfile
+FROM node:alpine
 
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
-RUN npm install sass
-COPY . .
 
+COPY . .
 RUN npm run build
 
-FROM nginx:stable-alpine
-
-COPY --from=build /app/.next /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 3000
-CMD ["nginx", "-g", "daemon off;"]
+
+CMD ["npm", "start"]
