--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,12 @@
 user root;
 worker_processes auto;
+worker_cpu_affinity auto;
+worker_rlimit_nofile 65535;
+
+timer_resolution 100ms;
 
 events {
-    worker_connections 1024;
+    worker_connections 65535;
     use epoll;
     multi_accept on;
 }
@@ -14,37 +18,63 @@ http {
     access_log off;
     error_log /var/log/nginx/error.log crit;
 
+    aio threads;
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
 
-    keepalive_timeout 65;
-    keepalive_requests 100;
+    keepalive_timeout 10;
+    keepalive_requests 1000;
 
-    client_body_buffer_size 10K;
-    client_header_buffer_size 1k;
-    client_max_body_size 8m;
-    large_client_header_buffers 2 1k;
+    reset_timedout_connection on;
+    client_body_timeout 10;
+    send_timeout 2;
+    lingering_timeout 5;
 
-    open_file_cache max=1000 inactive=20s;
+    open_file_cache max=1000000 inactive=20s;
     open_file_cache_valid 30s;
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
+    # FastCGI optimizations
+    fastcgi_buffers 256 16k;
+    fastcgi_buffer_size 128k;
+    fastcgi_connect_timeout 3s;
+    fastcgi_send_timeout 120s;
+    fastcgi_read_timeout 120s;
+    fastcgi_busy_buffers_size 256k;
+    fastcgi_temp_file_write_size 256k;
+    fastcgi_max_temp_file_size 0;
+    fastcgi_intercept_errors on;
+
     # SSL optimizations
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:2m;
-    ssl_session_timeout 1h;
-    ssl_buffer_size 4k;
+    ssl_session_cache shared:SSL:100m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+    ssl_buffer_size 1400;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
 
-    # Gzip Configuration
+    # OCSP Stapling
+    ssl_trusted_certificate /etc/letsencrypt/live/3-gymnasium.kg/chain.pem;
+
+    # Оптимизация GZIP
     gzip on;
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    gzip_min_length 1000;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml application/x-font-ttf font/opentype image/x-icon;
+    gzip_min_length 256;
+    gzip_static on;
+
+    # Brotli compression
+    brotli on;
+    brotli_comp_level 6;
+    brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml application/x-font-ttf font/opentype image/x-icon;
 
     server {
         listen 80;
@@ -54,80 +84,126 @@ http {
 
     server {
         listen 443 ssl http2;
+        http2_push_preload on;
         server_name 3-gymnasium.kg www.3-gymnasium.kg;
 
         ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
-
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;  # Используйте свой файл с параметрами Диффи-Хеллмана
 
         client_max_body_size 100M;
+        client_body_buffer_size 128k;
 
         location /static/ {
             alias /app/staticfiles/;
-            expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
+            expires max;
+            add_header Cache-Control "public, max-age=31536000, immutable";
             access_log off;
+            tcp_nodelay off;
+            open_file_cache max=3000 inactive=120s;
+            open_file_cache_valid 45s;
+            open_file_cache_min_uses 2;
+            open_file_cache_errors off;
         }
 
         location /media/ {
             alias /app/media/;
-            expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
+            expires max;
+            add_header Cache-Control "public, max-age=31536000, immutable";
             access_log off;
+            tcp_nodelay off;
+            open_file_cache max=3000 inactive=120s;
+            open_file_cache_valid 45s;
+            open_file_cache_min_uses 2;
+            open_file_cache_errors off;
         }
 
         location /api/ {
             proxy_pass http://web:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 8k;
-            proxy_buffers 4 8k;
+            proxy_buffer_size 16k;
+            proxy_buffers 256 16k;
+            proxy_busy_buffers_size 256k;
+            proxy_temp_file_write_size 256k;
+            proxy_max_temp_file_size 0;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_connect_timeout 5s;
+            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            proxy_cache_background_update on;
+            proxy_cache_lock on;
         }
 
         location /admin/ {
             proxy_pass http://web:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 8k;
-            proxy_buffers 4 8k;
+            proxy_buffer_size 16k;
+            proxy_buffers 256 16k;
+            proxy_busy_buffers_size 256k;
+            proxy_temp_file_write_size 256k;
+            proxy_max_temp_file_size 0;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         location /accounts/ {
             proxy_pass http://web:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 8k;
-            proxy_buffers 4 8k;
+            proxy_buffer_size 16k;
+            proxy_buffers 256 16k;
+            proxy_busy_buffers_size 256k;
+            proxy_temp_file_write_size 256k;
+            proxy_max_temp_file_size 0;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         location / {
             proxy_pass http://frontend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering on;
-            proxy_buffer_size 8k;
-            proxy_buffers 4 8k;
+            proxy_buffer_size 16k;
+            proxy_buffers 256 16k;
+            proxy_busy_buffers_size 256k;
+            proxy_temp_file_write_size 256k;
+            proxy_max_temp_file_size 0;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_connect_timeout 5s;
         }
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         # Deny access to hidden files
         location ~ /\. {
