--- a/nginx.conf
+++ b/nginx.conf
@@ -1,80 +1,34 @@
 user root;
-worker_processes auto;
-worker_cpu_affinity auto;
-worker_rlimit_nofile 65535;
-
-timer_resolution 100ms;
+worker_processes 1;
 
 events {
-    worker_connections 65535;
-    use epoll;
-    multi_accept on;
+    worker_connections 1024;
 }
 
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    access_log off;
-    error_log /var/log/nginx/error.log crit;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    aio threads;
+    access_log /var/log/nginx/access.log main;
+
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
 
-    keepalive_timeout 10;
-    keepalive_requests 1000;
-
-    reset_timedout_connection on;
-    client_body_timeout 10;
-    send_timeout 2;
-    lingering_timeout 5;
-
-    open_file_cache max=1000000 inactive=20s;
-    open_file_cache_valid 30s;
-    open_file_cache_min_uses 2;
-    open_file_cache_errors on;
-
-    # FastCGI optimizations
-    fastcgi_buffers 256 16k;
-    fastcgi_buffer_size 128k;
-    fastcgi_connect_timeout 3s;
-    fastcgi_send_timeout 120s;
-    fastcgi_read_timeout 120s;
-    fastcgi_busy_buffers_size 256k;
-    fastcgi_temp_file_write_size 256k;
-    fastcgi_max_temp_file_size 0;
-    fastcgi_intercept_errors on;
-
-    # SSL optimizations
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:100m;
-    ssl_session_timeout 1d;
-    ssl_session_tickets off;
-    ssl_buffer_size 1400;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
 
-    # OCSP Stapling
-    ssl_trusted_certificate /etc/letsencrypt/live/3-gymnasium.kg/chain.pem;
-
-    # Оптимизация GZIP
     gzip on;
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml application/x-font-ttf font/opentype image/x-icon;
-    gzip_min_length 256;
-    gzip_static on;
-
-    # Brotli compression
-    brotli on;
-    brotli_comp_level 6;
-    brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml application/x-font-ttf font/opentype image/x-icon;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     server {
         listen 80;
@@ -83,121 +37,60 @@ http {
     }
 
     server {
-        listen 443 ssl http2;
-        http2_push_preload on;
+        listen 443 ssl;
+        http2 on;
         server_name 3-gymnasium.kg www.3-gymnasium.kg;
 
         ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
-        ssl_dhparam /etc/nginx/ssl/dhparam.pem;  # Используйте свой файл с параметрами Диффи-Хеллмана
 
         client_max_body_size 100M;
-        client_body_buffer_size 128k;
 
         location /static/ {
             alias /app/staticfiles/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-            tcp_nodelay off;
-            open_file_cache max=3000 inactive=120s;
-            open_file_cache_valid 45s;
-            open_file_cache_min_uses 2;
-            open_file_cache_errors off;
+            expires 30d;
+            types { text/css css; }
+            add_header Cache-Control "public, max-age=2592000";
         }
 
         location /media/ {
             alias /app/media/;
-            expires max;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-            access_log off;
-            tcp_nodelay off;
-            open_file_cache max=3000 inactive=120s;
-            open_file_cache_valid 45s;
-            open_file_cache_min_uses 2;
-            open_file_cache_errors off;
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000";
         }
 
-        location /api/ {
-            proxy_pass http://web:9000;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 256 16k;
-            proxy_busy_buffers_size 256k;
-            proxy_temp_file_write_size 256k;
-            proxy_max_temp_file_size 0;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_connect_timeout 5s;
-            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
-            proxy_cache_background_update on;
-            proxy_cache_lock on;
-        }
+    location /api/ {
+        proxy_pass http://web:9000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        location /admin/ {
-            proxy_pass http://web:9000;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 256 16k;
-            proxy_busy_buffers_size 256k;
-            proxy_temp_file_write_size 256k;
-            proxy_max_temp_file_size 0;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_connect_timeout 5s;
-        }
+    location /admin/ {
+        proxy_pass http://web:9000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        location /accounts/ {
-            proxy_pass http://web:9000;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 256 16k;
-            proxy_busy_buffers_size 256k;
-            proxy_temp_file_write_size 256k;
-            proxy_max_temp_file_size 0;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_connect_timeout 5s;
-        }
+    location /accounts/ {
+        proxy_pass http://web:9000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        location / {
-            proxy_pass http://frontend:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 256 16k;
-            proxy_busy_buffers_size 256k;
-            proxy_temp_file_write_size 256k;
-            proxy_max_temp_file_size 0;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_connect_timeout 5s;
-        }
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
-        # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
@@ -205,11 +98,8 @@ http {
         add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
-        # Deny access to hidden files
         location ~ /\. {
             deny all;
-            access_log off;
-            log_not_found off;
         }
     }
 }
