--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,45 @@
 user root;
-worker_processes 1;
+worker_processes auto;
 
 events {
     worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log /var/log/nginx/access.log main;
+    access_log off;
+    error_log /var/log/nginx/error.log crit;
 
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
+    keepalive_timeout 30;
+    keepalive_requests 100;
+    reset_timedout_connection on;
+    client_body_timeout 10;
+    send_timeout 2;
+
+    open_file_cache max=1000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:2m;
+    ssl_session_timeout 1h;
+    ssl_buffer_size 4k;
 
     gzip on;
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length 1000;
 
     server {
         listen 80;
@@ -37,65 +48,84 @@ http {
     }
 
     server {
-        listen 443 ssl;
-        http2 on;
+        listen 443 ssl http2;
         server_name 3-gymnasium.kg www.3-gymnasium.kg;
 
         ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
 
         client_max_body_size 100M;
+        client_body_buffer_size 128k;
 
         location /static/ {
             alias /app/staticfiles/;
-            expires 30d;
-            types { text/css css; }
-            add_header Cache-Control "public, max-age=2592000";
+            expires max;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
         }
 
         location /media/ {
             alias /app/media/;
-            expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
+            expires max;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            access_log off;
         }
 
-    location /api/ {
-        proxy_pass http://web:9000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+        location /api/ {
+            proxy_pass http://web:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering on;
+            proxy_buffer_size 8k;
+            proxy_buffers 4 8k;
+        }
 
-    location /admin/ {
-        proxy_pass http://web:9000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+        location /admin/ {
+            proxy_pass http://web:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering on;
+            proxy_buffer_size 8k;
+            proxy_buffers 4 8k;
+        }
 
-    location /accounts/ {
-        proxy_pass http://web:9000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+        location /accounts/ {
+            proxy_pass http://web:9000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering on;
+            proxy_buffer_size 8k;
+            proxy_buffers 4 8k;
+        }
 
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering on;
+            proxy_buffer_size 8k;
+            proxy_buffers 4 8k;
+        }
 
         add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         location ~ /\. {
