--- a/nginx.conf
+++ b/nginx.conf
@@ -41,6 +41,12 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_min_length 1000;
 
+    map $http_accept $webp_suffix {
+    default   "";
+    "~*webp"  ".webp";
+
+    }
+
     server {
         listen 80;
         server_name 3-gymnasium.kg www.3-gymnasium.kg;
@@ -69,7 +75,19 @@ http {
             expires max;
             add_header Cache-Control "public, max-age=31536000, immutable";
             access_log off;
+
+            location ~ \.(png|jpe?g)$ {
+            add_header Vary Accept;
+            try_files $uri$webp_suffix $uri =404;
+            }
+
+            location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+            expires 365d;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+            }
+
         }
+
 
         location /api/ {
             proxy_pass http://web:9000;
