--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,4 @@
+# frontend/Dockerfile
 FROM node:alpine
 
 WORKDIR /app
@@ -5,7 +6,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-COPY ../frontend .
+COPY ./frontend .
 RUN npm run build
 
 EXPOSE 3000
