--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
-
-COPY ./frontend .
+RUN npm i sharp
+COPY . .
 RUN npm run build
 
 EXPOSE 3000
