--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 RUN npm i sharp
-COPY . .
+COPY ../frontend .
 RUN npm run build
 
 EXPOSE 3000
