--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 RUN npm i sharp
+RUN npm install @chakra-ui/react
+RUN npm install lucide-react
 COPY . .
 RUN npm run build
 
