--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,7 +8,7 @@ RUN npm install
 RUN npm i sharp
 RUN npm install @chakra-ui/react
 RUN npm install lucide-react
-RUN npm install @your-library/ui
+RUN npm install @mui/material @emotion/react @emotion/styled
 
 COPY . .
 RUN npm run build
