--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ user nginx;
 worker_processes auto;
 
 events {
-    worker_connections 1024;
+    worker_connections 2048;
     use epoll;
     multi_accept on;
 }
@@ -17,11 +17,11 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 30;
+    keepalive_timeout 15;
     keepalive_requests 1000;
     reset_timedout_connection on;
     client_body_timeout 10;
-    send_timeout 30;
+    send_timeout 15;
 
     open_file_cache max=1000 inactive=20s;
     open_file_cache_valid 30s;
@@ -32,13 +32,13 @@ http {
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 1h;
-    ssl_buffer_size 4k;
+    ssl_buffer_size 8k;
 
     gzip on;
     gzip_vary on;
     gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_comp_level 7;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
     gzip_min_length 1000;
 
     map $http_accept $webp_suffix {
@@ -67,12 +67,13 @@ http {
         resolver_timeout 5s;
 
         client_max_body_size 100M;
-        client_body_buffer_size 128k;
+        client_body_buffer_size 16k;
 
         location /static/ {
             alias /app/staticfiles/;
             expires max;
             add_header Cache-Control "public, max-age=31536000, immutable";
+            add_header ETag $upstream_http_etag;
             access_log off;
         }
 
