--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,9 +85,11 @@ services:
       - dev
 
   nginx:
-    image: akshayubhat/nginx-mod
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - static_volume:/app/staticfiles
       - media_volume:/app/media
       - /etc/letsencrypt:/etc/letsencrypt:ro
