--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,6 @@
-# nginx/Dockerfile
 FROM nginx:alpine
 
-# Установка зависимостей для сборки
+# Установка зависимостей
 RUN apk add --no-cache --virtual .build-deps \
     gcc \
     libc-dev \
@@ -32,11 +31,11 @@ RUN NGINX_VERSION=$(nginx -v 2>&1 | sed 's/^nginx version: nginx\///') && \
 RUN NGINX_VERSION=$(nginx -v 2>&1 | sed 's/^nginx version: nginx\///') && \
     cd /tmp/nginx-$NGINX_VERSION && \
     ./configure --with-compat --add-dynamic-module=/tmp/ngx_brotli && \
-    make modules && \
-    make install  # Используем make install для установки модулей
+    make modules
 
 # Копирование скомпилированного модуля в правильную директорию
-RUN cp /tmp/nginx-$NGINX_VERSION/objs/ngx_http_brotli_filter_module.so /usr/lib/nginx/modules/ && \
+RUN NGINX_VERSION=$(nginx -v 2>&1 | sed 's/^nginx version: nginx\///') && \
+    cp /tmp/nginx-$NGINX_VERSION/objs/ngx_http_brotli_filter_module.so /usr/lib/nginx/modules/ && \
     cp /tmp/nginx-$NGINX_VERSION/objs/ngx_http_brotli_static_module.so /usr/lib/nginx/modules/
 
 # Очистка
