--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,8 +14,8 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    access_log on;
-    error_log /var/log/nginx/error.log crit;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
 
     sendfile on;
     tcp_nopush on;
@@ -58,12 +58,6 @@ http {
     brotli_comp_level 6;
     brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml font/woff2;
 
-    # Поддержка webp
-    map $http_accept $webp_suffix {
-        default   "";
-        "~*webp"  ".webp";
-    }
-
     # Ограничение скорости запросов
     limit_req_zone $binary_remote_addr zone=one:10m rate=20r/s;
 
@@ -87,27 +81,19 @@ http {
         # Статические файлы
         location /static/ {
             alias /app/staticfiles/;
+            autoindex on; # Включает возможность увидеть директорию, чтобы убедиться, что файлы действительно доступны
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
-            add_header ETag $upstream_http_etag;
             access_log off;
         }
 
+        # Медиа файлы
         location /media/ {
             alias /app/media/;
+            autoindex on; # Включает возможность увидеть директорию, чтобы убедиться, что файлы действительно доступны
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
-
-            location ~ \.(png|jpe?g)$ {
-                add_header Vary Accept;
-                try_files $uri$webp_suffix $uri =404;
-            }
-
-            location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-                expires 365d;
-                add_header Cache-Control "public, max-age=31536000, immutable";
-            }
         }
 
         # Прокси для API с ограничением скорости
@@ -129,43 +115,7 @@ http {
             proxy_set_header Accept-Encoding "gzip";
         }
 
-        # Прокси для админки
-        location /admin/ {
-            proxy_pass http://web:9000;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "keep-alive";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 8 16k;
-            proxy_busy_buffers_size 32k;
-            proxy_read_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_set_header Accept-Encoding "gzip";
-        }
-
-        # Прокси для аккаунтов
-        location /accounts/ {
-            proxy_pass http://web:9000;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "keep-alive";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffering on;
-            proxy_buffer_size 16k;
-            proxy_buffers 8 16k;
-            proxy_busy_buffers_size 32k;
-            proxy_read_timeout 60s;
-            proxy_send_timeout 60s;
-            proxy_set_header Accept-Encoding "gzip";
-        }
-
-        # Прокси для фронтенда
+        # Прокси для остальных страниц
         location / {
             proxy_pass http://frontend:3000;
             proxy_http_version 1.1;
