--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,7 +80,7 @@ http {
 
         # Статические файлы
         location /static/ {
-            alias /backend/staticfiles/;
+            alias /app/staticfiles/;
             autoindex on; # Включает возможность увидеть директорию, чтобы убедиться, что файлы действительно доступны
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
@@ -89,7 +89,7 @@ http {
 
         # Медиа файлы
         location /media/ {
-            alias /backend/media/;
+            alias /app/media/;
             autoindex on; # Включает возможность увидеть директорию, чтобы убедиться, что файлы действительно доступны
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
