--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ EMAIL_HOST_PASSWORD='bcnx vaum cowe lryw'
 
 ALLOWED_HOSTS=3-gymnasium.kg,www.3-gymnasium.kg,web,127.0.0.1,localhost
 
-DEBUG=False
+DEBUG=True
 
 POSTGRES_DB=gimnasium
 POSTGRES_USER=admin
