--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,13 +26,11 @@ http {
     client_body_timeout 5;
     send_timeout 10;
 
-    # Кэширование открытых файлов
     open_file_cache max=500 inactive=30s;
     open_file_cache_valid 60s;
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
-    # SSL-настройки
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
@@ -45,7 +43,6 @@ http {
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
 
-    # Настройки GZIP
     gzip on;
     gzip_vary on;
     gzip_proxied any;
@@ -53,12 +50,10 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
     gzip_min_length 1000;
 
-    # Настройки Brotli
     brotli on;
     brotli_comp_level 6;
     brotli_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml font/woff2;
 
-    # Ограничение скорости запросов
     limit_req_zone $binary_remote_addr zone=one:10m rate=20r/s;
 
     server {
@@ -71,32 +66,28 @@ http {
         listen 443 ssl http2;
         server_name 3-gymnasium.kg www.3-gymnasium.kg;
 
-        # SSL-сертификаты
         ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
 
         client_max_body_size 20M;
         client_body_buffer_size 16k;
 
-        # Статические файлы
         location /static/ {
             alias /app/staticfiles/;
-            autoindex on; # Включает возможность увидеть директорию, чтобы убедиться, что файлы действительно доступны
+            autoindex on;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
         }
 
-        # Медиа файлы
         location /media/ {
             alias /app/media/;
-            autoindex on; # Включает возможность увидеть директорию, чтобы убедиться, что файлы действительно доступны
+            autoindex on;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
         }
 
-        # Прокси для API с ограничением скорости
         location /api/ {
             limit_req zone=one burst=50 nodelay;
             proxy_pass http://web:9000;
@@ -115,7 +106,6 @@ http {
             proxy_set_header Accept-Encoding "gzip";
         }
 
-        # Прокси для остальных страниц
         location / {
             proxy_pass http://frontend:3000;
             proxy_http_version 1.1;
@@ -133,14 +123,12 @@ http {
             proxy_set_header Accept-Encoding "gzip";
         }
 
-        # Защита и безопасность
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         add_header X-XSS-Protection "1; mode=block" always;
 
-        # Запрещаем доступ к скрытым файлам
         location ~ /\. {
             deny all;
         }
