--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -74,6 +74,7 @@ http {
 
         location /static/ {
             alias /app/staticfiles/;
+            try_files $uri $uri/ =404;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
@@ -81,6 +82,7 @@ http {
 
         location /media/ {
             alias /app/media/;
+            try_files $uri $uri/ =404;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000, immutable";
             access_log off;
