--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,6 +9,9 @@ COPY package*.json ./
 # Если package-lock.json отсутствует, используем npm install вместо npm ci
 RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
+# Устанавливаем react-player
+RUN npm install react-player
+
 # Копируем остальные файлы проекта
 COPY . .
 
