--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,34 +6,28 @@ WORKDIR /app
 # Копируем файлы package.json и package-lock.json (если есть)
 COPY package*.json ./
 
-# Если package-lock.json отсутствует, используем npm install вместо npm ci
-RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
+# Устанавливаем зависимости
+RUN npm ci || npm install
 
-RUN npm install react-player
-
+# Копируем исходный код
 COPY . .
 
-RUN echo "Contents of /app before build:" && ls -la
+# Собираем приложение
 RUN npm run build
-RUN echo "Contents of /app after build:" && ls -la
-RUN echo "Contents of /app/.next after build:" && ls -la .next
 
 # Этап запуска
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Копируем только необходимые файлы из этапа сборки
+# Копируем необходимые файлы из этапа сборки
+COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/next.config.mjs ./
 
 # Устанавливаем только production-зависимости
-RUN npm ci --only=production || npm install --only=production
-
-RUN echo "Contents of /app in final stage:" && ls -la
-RUN echo "Contents of /app/.next in final stage:" && ls -la .next
+RUN npm ci --only=production
 
 # Указываем порт, который будет использовать приложение
 EXPOSE 3000
