--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,20 +106,16 @@ services:
       - dev
 
   frontend:
-      build:
-        context: ./frontend
-        dockerfile: Dockerfile
-      volumes:
-        - ./frontend:/app
-        - /app/node_modules
-        - /app/.next
-      environment:
-        - NEXT_PUBLIC_API=https://3-gymnasium.kg
-        - NEXT_PUBLIC_ENDPOINT=api
-      ports:
-        - "3000:3000"
-      networks:
-        - dev
+    build: ./frontend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+      - /app/.next
+    environment:
+      - NEXT_PUBLIC_API=https://3-gymnasium.kg
+      - NEXT_PUBLIC_ENDPOINT=api
+    networks:
+      - dev
 
 volumes:
   postgres_data:
