--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,6 @@ http {
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
-    SSL параметры временно закомментированы
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
@@ -64,10 +63,11 @@ http {
     }
 
     server {
-        listen 443 ssl http2;
+        #listen 443 ssl http2;
+        listen 443 http2;
         server_name 3-gymnasium.kg www.3-gymnasium.kg;
-        ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
+        #ssl_certificate /etc/letsencrypt/live/3-gymnasium.kg/fullchain.pem;
+        #ssl_certificate_key /etc/letsencrypt/live/3-gymnasium.kg/privkey.pem;
 
         client_max_body_size 100M;
         client_body_buffer_size 128k;
@@ -142,7 +142,7 @@ http {
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; # Закомментировано, так как используется без HTTPS
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         add_header X-XSS-Protection "1; mode=block" always;
 
         location ~ /\. {
