--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SECRET_KEY='django-insecure-m79pr=z3v^v0e8f@y^(tb1ak%=ga^0813me9=5c!^iigx_nkj6'
 EMAIL_HOST_USER='eksprementalnayagymnasia3@gmail.com'
 EMAIL_HOST_PASSWORD='qxal wdyp ocha nunl'
 
-ALLOWED_HOSTS=3-gymnasium.kg,www.3-gymnasium.kg,web,127.0.0.1,localhost
+ALLOWED_HOSTS=3-gymnasium.kg,www.3-gymnasium.kg,web,127.0.0.1,localhost,194.163.132.44
 
 DEBUG=False
 
