--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 services:
   web:
     build: ./backend
-    command: >
-      bash -c "python manage.py collectstatic --noinput && python manage.py makemigrations && python manage.py migrate --fake main && python manage.py migrate && gunicorn --bind 0.0.0.0:9000 --workers 4 --threads 2 --worker-class gthread --timeout 120 Gimnasium.wsgi:application"
+    command: bash -c "tail -f /dev/null"
     volumes:
       - ./backend:/app
       - ./.env:/app/.env
