--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,13 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
-RUN npm install -D @next/bundle-analyzer next-pwa
+RUN npm install -D @next/bundle-analyzer next-pwa @tanstack/react-query
 
 COPY . .
+
+# Очистим next.config.mjs от лишних зависимостей
+RUN echo 'const config = {images:{domains:["3-gymnasium.kg"],minimumCacheTTL:60},poweredByHeader:false,compress:true};export default config;' > next.config.mjs
+
 RUN npm run build
 
 FROM node:18-alpine AS runner
