--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,13 +3,9 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
-RUN npm install -D @next/bundle-analyzer next-pwa @tanstack/react-query
+RUN npm install -D @next/bundle-analyzer @tanstack/react-query
 
 COPY . .
-
-# Очистим next.config.mjs от лишних зависимостей
-RUN echo 'const config = {images:{domains:["3-gymnasium.kg"],minimumCacheTTL:60},poweredByHeader:false,compress:true};export default config;' > next.config.mjs
-
 RUN npm run build
 
 FROM node:18-alpine AS runner
@@ -19,11 +15,12 @@ ENV NODE_ENV production
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
+COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
 
 USER nextjs
 EXPOSE 3000
 
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
